fixed adaptive on mobile. Titles #75

--- a/src/components/find-room/find-room.scss
+++ b/src/components/find-room/find-room.scss
@@ -15,7 +15,7 @@ $side-padding: round((30 * 100% / $base) * 1000) / 1000;
 
   &__title {
     width: 98%;
-    max-height: 60px;
+    max-height: 87px;
     @include fix-overflow;
     @include font-h1;
     margin-bottom: 20px;
