--- a/src/components/registration/registration.scss
+++ b/src/components/registration/registration.scss
@@ -18,7 +18,7 @@ $side-padding: round((30 * 100% / $base) * 1000) / 1000;
   &__title {
     width: 98%;
     margin-bottom: 22px;
-    max-height: 30px;
+    max-height: 67px;
   }
 
   &__block {
